Configuration/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus-stack
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
