Configuration/manifests/jenkins-master.yaml
kind: Deployment
metadata:
  labels:
    app: jenkins
    role: master
  name: jenkins-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
      role: master
  template:
    metadata:
      labels:
        app: jenkins
        role: master
    spec:
      containers:
      - image: aymanzahran/ipad-jenkins-image:latest
        name: jenkins-master
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
spec:
  selector:
    app: jenkins
    role: master
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
